# artana-evidence-platform

./: .dockerignore  .env.postgres.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  architecture_overrides.json  architecture_structure_overrides.json  coverage.xml  docker-compose.postgres.yml  pyproject.toml  pytest.ini
services/artana_evidence_api/: Dockerfile  README.md  __main__.py  agent_contracts.py  alembic.ini  alias_yield_reporting.py  alliance_gene_gateways.py  alphafold_gateway.py  api_keys.py  app.py  approval_store.py  artana.toml  artana_artifact_store.py  artana_store_records.py  artana_stores.py  artifact_store.py  auth.py  bootstrap_proposal_review.py  chat_graph_write_models.py  chat_graph_write_workflow.py  chat_literature.py  chat_sessions.py  chat_workflow.py  claim_curation_runtime.py  claim_curation_workflow.py  claim_fingerprint.py  clinicaltrials_gateway.py  clinvar_gateway.py  composition.py  confidence_assessment.py  config.py  continuous_learning_budget.py  continuous_learning_planning.py  continuous_learning_runtime.py  database.py  db_schema.py  dependencies.py  direct_source_search.py  document_binary_store.py  document_context_summary.py  (+201 more)
services/artana_evidence_api/alembic/: __init__.py  env.py
services/artana_evidence_api/direct_sources/: __init__.py  capture.py  gnomad.py  gnomad_gateway.py  orphanet.py  orphanet_gateway.py
services/artana_evidence_api/docs/: README.md  api-reference.md  concepts.md  full-research-workflow.md  getting-started.md  transparency.md  use-cases.md  user-guide.md
services/artana_evidence_api/full_ai_orchestrator/: __init__.py  action_registry.py  decision_history.py  execute.py  initial_decisions.py  queue.py  response.py  response_artifacts.py  response_summaries.py  response_support.py  runtime_artifacts.py  runtime_constants.py  runtime_models.py  workspace_support.py
services/artana_evidence_api/graph_integration/: __init__.py  context.py  contracts.py  preflight.py  submission.py
services/artana_evidence_api/identity/: __init__.py  contracts.py  local_gateway.py
services/artana_evidence_api/models/: __init__.py  api_key.py  base.py  discovery.py  harness.py  research_space.py  user.py
services/artana_evidence_api/prompts/: full_ai_orchestrator_shadow_planner_v1.md
services/artana_evidence_api/queued_run/: __init__.py  artifacts.py  constants.py  failures.py  models.py  responses.py  urls.py  wait.py  worker_readiness.py
services/artana_evidence_api/research_init/: __init__.py  source_caps.py
services/artana_evidence_api/routers/: approvals.py  artifacts.py  authentication.py  chat.py  chat_models.py  continuous_learning_runs.py  document_models.py  documents.py  evidence_selection_runs.py  full_ai_orchestrator_runs.py  graph_connection_runs.py  graph_curation_runs.py  graph_explorer.py  graph_search_runs.py  harnesses.py  health.py  hypothesis_runs.py  marrvel.py  mechanism_discovery_runs.py  proposals.py  pubmed.py  research_bootstrap_runs.py  research_init.py  research_onboarding_runs.py  research_state.py  review_queue.py  runs.py  schedules.py  spaces.py  supervisor_details.py  supervisor_models.py  supervisor_runs.py  v2_public.py  v2_public_aliases.py  v2_public_payloads.py
services/artana_evidence_api/runtime/: __init__.py  artana_imports.py  config.py  logging_support.py  model_health.py  model_registry.py  pdf_text_diagnostics.py  policy.py  postgres_store.py
services/artana_evidence_api/source_plugins/: __init__.py  _helpers.py  alliance.py  alphafold.py  clinical_trials.py  clinvar.py  contracts.py  drugbank.py  gnomad.py  marrvel.py  mgi.py  pubmed.py  registry.py  uniprot.py  zfin.py
services/artana_evidence_api/source_routes/: __init__.py  gnomad.py  orphanet.py
services/artana_evidence_api/tests/: __init__.py  bootstrap_e2e_schema.py  conftest.py  e2e_onboarding_server.py  support.py
services/artana_evidence_api/types/: __init__.py  common.py  graph_contracts.py  graph_decision_contracts.py  graph_dictionary_contracts.py  graph_fact_assessment.py  graph_workflow_contracts.py
services/artana_evidence_db/: .dockerignore  Dockerfile  README.md  __main__.py  _claim_paper_links.py  _dictionary_relation_types.py  _dictionary_repository_constraints_merge_mixin.py  _dictionary_repository_transform_mixin.py  _dictionary_repository_variable_mixin.py  _graph_document_support.py  _relation_auto_promotion_mixin.py  _relation_curation_mixin.py  _relation_evidence_presenter.py  _relation_query_mixin.py  _relation_repository_shared.py  _relation_subgraph_helpers.py  ai_full_mode_concept_service.py  ai_full_mode_decision_connector_service.py  ai_full_mode_graph_change_service.py  ai_full_mode_models.py  ai_full_mode_persistence_models.py  ai_full_mode_repository_mixin.py  ai_full_mode_service.py  ai_full_mode_support.py  alembic.ini  app.py  artana-evidence-db.generated.ts  auth.py  biomedical_concept_bootstrap.py  claim_evidence_models.py  claim_evidence_repository.py  claim_evidence_service.py  claim_metrics.py  claim_participant_backfill_models.py  claim_participant_backfill_service.py  claim_participant_backfill_support.py  claim_participant_models.py  claim_participant_repository.py  claim_participant_service.py  claim_projection_readiness_service.py  (+146 more)
services/artana_evidence_db/alembic/: env.py
services/artana_evidence_db/dictionary/: __init__.py  constraints.py  domain_context.py  schemas.py  value_validation.py
services/artana_evidence_db/docs/: README.md  api-reference.md  data-model.md  getting-started.md  v2-reusable-graph-engine-plan.md
services/artana_evidence_db/examples/: README.md  __init__.py  http_only_client_flow.py
services/artana_evidence_db/graph_api_schemas/: ai_full_mode_schemas.py  claim_graph_schemas.py  concept_schemas.py  dictionary_schema_entities_relations.py  dictionary_schema_search_misc.py  dictionary_schema_value_sets.py  dictionary_schema_variables.py  dictionary_schemas.py  dictionary_transform_schemas.py  domain_pack_schemas.py  hypothesis_schemas.py  kernel_entity_schemas.py  kernel_graph_schemas.py  (+6 more)
(+1260 files in other folders)
