[build-system]
requires = [ "setuptools>=61.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "artana-resource-library"
version = "0.1.0"
description = "Artana Resource Library - Curated biomedical data for research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "fastapi>=0.135,<0.136", "uvicorn[standard]>=0.30.0", "pydantic>=2.8.0", "email-validator>=2.2.0", "sqlalchemy>=2.0.0", "greenlet>=3.2.0", "psycopg2-binary>=2.9.0", "asyncpg>=0.29.0", "alembic>=1.13.0", "google-cloud-secret-manager>=2.16.0", "google-cloud-storage>=2.10.0", "httpx>=0.27.0", "artana-kernel @ git+https://github.com/aandresalvarez/artana-kernel.git@5678d779c21b935a32c917ee78d06a61222b287d", "bcrypt>=4.1.0", "cryptography>=46.0.6", "defusedxml>=0.7.1", "jsonschema>=4.20.0", "aiohttp>=3.10.0", "anyio>=4.0.0", "requests>=2.30.0", "PyJWT>=2.12.0", "protobuf>=6.33.5", "python-multipart>=0.0.20", "pypdf>=6.10.2",]
[[project.authors]]
name = "Artana"

[project.optional-dependencies]
dev = [ "pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "black>=26.3.1", "flake8>=7.0.0", "ruff>=0.11.10,<0.12.0", "mypy>=1.8.0", "types-defusedxml", "types-jsonschema", "types-PyYAML", "pre-commit>=3.7.0", "pip-audit>=2.7.0", "bandit>=1.8.0", "jaraco.context>=6.1.0", "pytest-watch>=4.2.0", "pytest-xdist>=3.6.0", "hypothesis>=6.112.1", "schemathesis>=3.24.6", "allure-python-commons>=2.15.3", "virtualenv>=20.36.1", "psutil", "watchdog>=3.0.0", "python-dotenv>=1.0.0", "mkdocs>=1.5.0", "mkdocs-material>=9.0.0",]

[tool.setuptools.packages.find]
where = [ "services", "packages/artana_api/src"]
include = [ "artana_evidence_api*", "artana_evidence_db*", "artana_api*"]
namespaces = false

[tool.black]
line-length = 88
target-version = [ "py313",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = false
[[tool.mypy.overrides]]
module = [ "alembic.*", "requests.*", "requests",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "jsonschema", "jsonschema.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "artana", "artana.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [ "artana_evidence_db", "artana_evidence_db.*",]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "services.artana_evidence_db.legacy_dependency_factories",
]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "services.artana_evidence_db.routers.graph_views",
  "services.artana_evidence_db.routers.reasoning_paths",
]
disable_error_code = [ "arg-type",]


[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503", "E501",]
exclude = [ ".git", "__pycache__", "build", "dist", "*.egg-info", ".venv", ".tox", "migrations",]
per-file-ignores = [
  "scripts/*.py:E402",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.bandit]
exclude_dirs = [ "tests", "migrations", ".venv",]
skips = [ "B101", "B601", "B405", "B106",]

[tool.ruff.lint]
select = [ "E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG",]
ignore = [ "E203", "E501", "W291", "W292", "W293", "COM812",]

[tool.coverage.run]
source = [ "services",]
omit = [ "*/tests/*", "*/test_*.py",]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "def __repr__", "if self.debug:", "if settings.DEBUG", "raise AssertionError", "raise NotImplementedError", "if 0:", "if __name__ == .__main__.:", "class .*\\bProtocol\\):", "@(abc\\.)?abstractmethod",]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = [ "E402", "S107", "TRY400", "PLC0415", "BLE001", "C901", "PLR0911", "T201", "TC003", "S105", "TRY003", "EM101", "EM102", "EXE001", "S603", "ARG005", "PERF401", "S101", "S608", "PLR1714",]
"tests/**" = [ "S101", "ARG", "ERA", "PLR2004", "SLF001", "E402", "S106", "PT011", "B017", "N806", "PLC0415", "PTH123", "EM102", "TRY003", "S105", "INP001", "B007", "PERF102", "RET504", "PTH110", "SIM222", "PLR0913", "PT003", "TRY002", "BLE001", "B023", "S603", "S608", "TC001", "TC002", "TC003", "PLR0911", "PLR0915", "C901", "PT017", "EM101", "S108",]
"packages/artana_api/tests/**" = [ "S101", "ARG", "ARG005", "ERA", "PLR2004", "SLF001", "E402", "S106", "S107", "PT011", "B017", "N806", "PLC0415", "PTH123", "EM102", "TRY003", "S105", "INP001", "B007", "PERF102", "RET504", "PTH110", "SIM222", "PLR0913", "PT003", "TRY002", "BLE001", "B023", "S603", "S608", "TC001", "TC002", "TC003", "TC006", "PLR0911", "PLR0915", "C901", "PT017", "EM101", "S108",]
"packages/artana_api/examples/**" = [ "INP001", "T201", "E402", "TC003",]
"packages/artana_api/src/artana_api/client.py" = [ "TC001", "TC003", "TRY003", "EM101", "EM102", "SLF001", "PLR0913",]
"packages/artana_api/src/artana_api/config.py" = [ "TC003", "TRY003", "EM101",]
"packages/artana_api/src/artana_api/models.py" = [ "TC003", "TRY003", "EM101",]
"services/artana_evidence_db/tests/**" = [ "S101", "ARG", "ERA", "PLR2004", "SLF001", "E402", "S106", "PT011", "B017", "N806", "PLC0415", "PTH123", "EM102", "TRY003", "S105", "INP001", "B007", "PERF102", "RET504", "PTH110", "SIM222", "PLR0913", "PT003", "TRY002", "BLE001", "B023", "S603", "S608", "TC001", "TC002", "TC003", "PLR0911", "PLR0915", "C901", "PT017", "EM101", "S108",]
"services/artana_evidence_api/tests/**" = [ "S101", "ARG", "ERA", "PLR2004", "SLF001", "E402", "S106", "PT011", "B017", "N806", "PLC0415", "PTH123", "EM102", "TRY003", "S105", "INP001", "B007", "PERF102", "RET504", "PTH110", "SIM222", "PLR0913", "PT003", "TRY002", "BLE001", "B023", "S603", "S608", "TC001", "TC002", "TC003", "PLR0911", "PLR0915", "C901", "PT017", "EM101", "S108",]
"services/artana_evidence_db/routers/*.py" = [ "B008", "TC001", "TC002", "TC003", "PLR0913", "TRY301", "TRY300", "FBT003", "TC006", "C901", "PLR0912", "S106",]
"services/artana_evidence_db/_*.py" = [ "TC001", "TC002", "TC003", "PLR0913",]
"services/artana_evidence_db/*.py" = [ "TC001", "TC002", "TC003", "PLR0913", "C901", "S106", "S105", "PYI034", "PYI036", "UP040",]
"services/artana_evidence_db/auth.py" = [ "B008",]
"services/artana_evidence_db/dependencies.py" = [ "B008",]
"services/artana_evidence_api/routers/*.py" = [ "B008", "TC001", "TC002", "TC003", "PLR0913", "TRY301", "TRY300", "FBT003", "TC006", "C901", "PLR0912", "S106",]
"services/artana_evidence_api/_*.py" = [ "TC001", "TC002", "TC003", "PLR0913",]
"services/artana_evidence_api/*.py" = [ "TC001", "TC002", "TC003", "PLR0913", "C901", "S106", "S105", "PYI034", "PYI036", "UP040", "TRY003", "EM101", "EM102",]
"services/artana_evidence_api/auth.py" = [ "B008",]
"services/artana_evidence_api/manage.py" = [ "S603",]
"services/artana_evidence_api/models/*.py" = [ "TC001", "TC002", "TC003",]
"services/artana_evidence_api/types/*.py" = [ "TC001", "TC002", "TC003",]
"services/artana_evidence_api/alembic/versions/*.py" = [ "S608",]
"services/research_inbox_runtime/tests/**" = [ "S101", "ARG", "ERA", "PLR2004", "SLF001", "E402", "S106", "PT011", "B017", "N806", "PLC0415", "PTH123", "EM102", "TRY003", "S105", "INP001", "B007", "PERF102", "RET504", "PTH110", "SIM222", "PLR0913", "PT003", "TRY002", "BLE001", "B023", "S603", "S608", "TC001", "TC002", "TC003", "PLR0911", "PLR0915", "C901", "PT017", "EM101", "S108",]
"services/research_inbox_runtime/routers/*.py" = [ "B008", "TC001", "TC002", "TC003", "PLR0913", "TRY301", "TRY300", "FBT003", "TC006", "C901", "PLR0912", "S106", "INP001",]
"services/research_inbox_runtime/*.py" = [ "TC001", "TC002", "TC003", "PLR0913", "C901", "S106", "S105", "PYI034", "PYI036", "UP040", "TRY003", "EM101", "EM102",]
"services/research_inbox_runtime/dependencies.py" = [ "B008",]
"services/research_inbox_runtime/manage.py" = [ "S603", "S608", "T201", "PLR2004",]
"services/research_inbox_runtime/store.py" = [ "S608",]
"services/research_inbox_runtime/types.py" = [ "A005",]
